# obelisk

./: .gitignore  Cargo.toml  README.md  actions.csv  constraints.json.template  convert.py  genetic-basic.js  index.js  package-lock.json  package.json  players.json.template  train.py  tree.js
benches/: model.rs  update.rs
src/: generate_training.rs  genetic_basic.rs  lib.rs  main.rs  model.rs  monte_carlo.rs
test/: test.js
