[package]
name = "obelisk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[dependencies]
lazy_static = "1.4.0"
num_cpus = "1.13.1"
rand = "0.8.5"
scoped_threadpool = "0.1.9"
smallvec = "1.8.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[[bench]]
name = "update"
harness = false

[profile.release]
debug = true

[[bin]]
name = "evaluate"
test = false
bench = false

[[bin]]
name = "generate_training"
test = false
bench = false
